tests/NormalTests/paczka1/fuzzy1/83592044.err
Error in line 18: S249 S249 4,7
Error in line 14: L28qw A475 8,4
Error in line 31: lzxSA S249 70,6
Error in line 32: lzxSA A475 57,3
Error in line 28: o2vK S249 86,0
Error in line 37: S249 A475 60,1
